<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:onClick="goNext"
        android:text="@string/play" />

    <CheckedTextView
        android:id="@+id/checkedTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/generating_plaintext" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkedTextView1"
        android:indeterminate="false"
        android:max="100"
        android:minWidth="200dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:onClick="goBack"
        android:text="@string/back" />

    <CheckBox
        android:id="@+id/CheckBox02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:checked="true"
        android:onClick="onCheckboxClicked"
        android:text="@string/solution" />

    <CheckBox
        android:id="@+id/CheckBox01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/CheckBox02"
        android:layout_alignLeft="@+id/CheckBox02"
        android:checked="true"
        android:onClick="onCheckboxClicked"
        android:text="@string/explored_walls" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/CheckBox01"
        android:layout_alignLeft="@+id/CheckBox01"
        android:checked="true"
        android:onClick="onCheckboxClicked"
        android:text="@string/map" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox1"
        android:layout_alignBottom="@+id/checkBox1"
        android:layout_marginRight="14dp"
        android:layout_toLeftOf="@+id/Button01"
        android:text="@string/show"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBox1"
        android:layout_marginBottom="14dp"
        android:layout_centerHorizontal="true"
        android:entries="@array/solvtype_array" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinner2"
        android:layout_centerHorizontal="true"
        android:text="@string/mazesolver"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>